tdf#153258 VML import improve WordArt detection

There exists WordArt types whose internal name do not start with
'fontwork', e.g. mso_sptTextDeflateInflateDeflate has 'mso-spt167'.
The fix uses the MSO_SPT enum directly.

Change-Id: Idb32b3ef9957bef5d948e1d86507d71fef006e91
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146503
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>